--- a/PCATool/app/src/main/AndroidManifest.xml
+++ b/PCATool/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.Cadastro">
+        <activity android:name=".activity.telas.Cadastro">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,7 +30,7 @@
             android:name="DOMAIN_PACKAGE_NAME"
             android:value="com.developer.barbosa.pcatool.model" />
 
-        <activity android:name=".activity.ModuloQuestionario" />
+        <activity android:name=".activity.telas.ModuloQuestionario" />
         <activity android:name=".activity.adulto.AdultoA" />
         <activity android:name=".activity.adulto.AdultoB" />
         <activity android:name=".activity.adulto.AdultoC" />
@@ -49,7 +49,7 @@
         <activity android:name=".activity.profissional.ProfissionalF"/>
         <activity android:name=".activity.profissional.ProfissionalG"/>
         <activity android:name=".activity.profissional.ProfissionalH"/>
-        <activity android:name=".activity.Escore"></activity>
+        <activity android:name=".activity.telas.Escore"></activity>
     </application>
 
 </manifest>
